[project]
name = "single-process-3d-printed-smart-pad-with-cnn-based-touch-localization-and-force-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
